tests/negative/cry/cryneg.cry
module cryneg where

f : [8] -> [8]
f x = x + 1

comp : [8] -> [8]
comp x = ys @ (0 : [1])
  where
    ys = [ x + i | i <- [1, 2] ]

rec : [8] -> [8]
rec x = if x == 0 then 0 else rec (x - 1)

enum Dir = North | South | East | West

turn : Dir -> Dir
turn d = case d of
      North -> East
      East  -> South
      South -> West
      West  -> North
